--- a/recipes/shiro.html
+++ b/recipes/shiro.html
@@ -20,7 +20,8 @@
     <li>Garlic</li>
     <li>water</li>
     <li>shiro powder</li>
-    <li>salt and chili</li>
+    <li>salt</li>
+    <li>chili</li>
     <li> and habesha's butter</li>
    </ul>
    <h2>STEPS</h2>
